fixed slight name placement error on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -35,14 +35,16 @@ h1, h2, h3, h4, h5, h6, p, b, strong, span {
 }
 
 h1 {
-    font-family: "Playfair Display", "DM Sans";
+    /* font-family: "Playfair Display", "DM Sans"; */
+    font-family: "DM Sans", sans-serif;
     font-size: 60px;
     line-height: 68px;
     font-weight: 700;
 }
 
 .h1-small {
-    font-family: "Playfair Display", "DM Sans";
+    /* font-family: "Playfair Display", "DM Sans"; */
+    font-family: "DM Sans", sans-serif;
     font-size: 35px !important;
     line-height: 45px;
     font-weight: 700;
@@ -55,7 +57,8 @@ h2 {
 }
 
 .h2-playfair {
-    font-family: "Playfair Display", "DM Sans";
+    /* font-family: "Playfair Display", "DM Sans"; */
+    font-family: "DM Sans", sans-serif;
 }
 
 @media (max-width: 900px) {
